--- a/index.html
+++ b/index.html
@@ -18,27 +18,29 @@
 
     <div class="hero">
         This website is awesome
-    </div>
 
-    <div class="hero-secondary">
-        This website has some subtext that goes here under the main title. It's a me, Mario.
-    </div>
-
-    <div class="pic1-container">
-        <div class="content">
-            <img src="pic1.jpg" alt="A white flower in a white vase in front of a white background">
+        <div class="hero-secondary">
+            This website has some subtext that goes here under the main title. It's a me, Mario.
         </div>
+
+        <div class="pic1-container">
+            <div class="content">
+                <img src="pic1.jpg" alt="A white flower in a white vase in front of a white background">
+        </div>
+    </div>
     </div>
 
     <div class="main">
         <div class="info">
             Some random information will go below. 
         </div>
-        <div class="card"> Macaroon pudding tootsie roll soufflé pie dessert. Caramels lemon drops gummies marshmallow soufflé powder. Fruitcake I love sugar plum sugar plum cake biscuit muffin I love. Cake chocolate bar I love liquorice tart pie candy I love macaroon. </div>
-        <div class="card"> Macaroon pudding tootsie roll soufflé pie dessert. Caramels lemon drops gummies marshmallow soufflé powder. Fruitcake I love sugar plum sugar plum cake biscuit muffin I love. Cake chocolate bar I love liquorice tart pie candy I love macaroon. </div>
-        <div class="card"> Macaroon pudding tootsie roll soufflé pie dessert. Caramels lemon drops gummies marshmallow soufflé powder. Fruitcake I love sugar plum sugar plum cake biscuit muffin I love. Cake chocolate bar I love liquorice tart pie candy I love macaroon. </div>
-        <div class="card"> Macaroon pudding tootsie roll soufflé pie dessert. Caramels lemon drops gummies marshmallow soufflé powder. Fruitcake I love sugar plum sugar plum cake biscuit muffin I love. Cake chocolate bar I love liquorice tart pie candy I love macaroon. </div>
-        <div class="quote">
+        <div class="card-container">
+            <div class="card"> Macaroon pudding tootsie roll soufflé pie dessert. Caramels lemon drops gummies marshmallow soufflé powder. Fruitcake I love sugar plum sugar plum cake biscuit muffin I love. Cake chocolate bar I love liquorice tart pie candy I love macaroon. </div>
+            <div class="card"> Macaroon pudding tootsie roll soufflé pie dessert. Caramels lemon drops gummies marshmallow soufflé powder. Fruitcake I love sugar plum sugar plum cake biscuit muffin I love. Cake chocolate bar I love liquorice tart pie candy I love macaroon. </div>
+            <div class="card"> Macaroon pudding tootsie roll soufflé pie dessert. Caramels lemon drops gummies marshmallow soufflé powder. Fruitcake I love sugar plum sugar plum cake biscuit muffin I love. Cake chocolate bar I love liquorice tart pie candy I love macaroon. </div>
+            <div class="card"> Macaroon pudding tootsie roll soufflé pie dessert. Caramels lemon drops gummies marshmallow soufflé powder. Fruitcake I love sugar plum sugar plum cake biscuit muffin I love. Cake chocolate bar I love liquorice tart pie candy I love macaroon. </div>
+        </div>
+            <div class="quote">
             Don't be mad cause Im doing me better than you're doing you. -Childish Gambino
         </div>
     </div>
