changing contents and texts

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
     <div class="header"> 
         <div class="logo">
-        Header Logo
+        Backdrop Bliss
         </div>
         <ul class="right-links">
-            <li><a href="#">Link one</a></li>
-            <li><a href="#">Link two</a></li>
-            <li><a href="#">Link three</a></li>
+            <li><a href="#">Overview</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Account</a></li>
         </ul>
     </div>
 
     <div class="hero">
         <div class="text-hero">
-            <div class="title-text">This website is awesome</div>
-            <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a me, Mario.</div>
-            <button>
+            <div class="title-text">Digital Décor: <br>Screen Backgrounds</div>
+            <div class="hero-secondary">Discover a Vast Collection of Downloadable Background Images to Beautify Your Digital World</div>
+            <button id="header-button">
                 Sign up
             </button>
         </div>
@@ -44,29 +44,38 @@
                 <img src="pic2.jpg" alt="Bamboo leaves.">
                 <div class="card">This is an image of bamboo that I took.</div>
               </div>
+
               <div class="content">
                 <img src="pic3.jpg" alt="Frozen water.">
                 <div class="card">This is an image of the frozen pond in our garden.</div>
               </div>
+
               <div class="content">
                 <img src="pic4.jpg" alt="Bamboo with a blue background.">
                 <div class="card">This is also some nice bamboo.</div>
               </div>
+
               <div class="content">
                 <img src="pic5.jpg" alt="Bamboo leaf with water on it.">
                 <div class="card">Tasty bamboo with water on a leaf. Panda likee.</div>
               </div>
+
             </div>
-          </div>
+        </div>
           
 
-        <div class="quote">
-            Don't be mad cause Im doing me better than you're doing you. <div class="quote-author">-Childish Gambino</div>
+        <div class="quote-contianer">
+            <div class="quote">
+               I love these high quality backgrounds. I use them for all my screens! <div class="quote-author">-a happy customer</div>
+            </div>
         </div>
 
         <div class="cta">
             <div class="cta-text">
-                Call to action! You should do something! 
+                What are you waiting for? Sign up now!
+                <div class="cta-subtext">
+                    You just need an E-Mail adress. No credit card required.
+                </div>
             </div>
             <button id="cta-button">
                 Sign up
@@ -76,7 +85,8 @@
     </div>
 
     <div class="footer">
-        Copyright © <a href="https://github.com/memeoplast">NMG</a>
+        Copyright © <a href="https://github.com/memeoplast">NMG</a> 
+
     </div>
 
 </body>
