--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="content">
-            <img src="pic3.jpg" alt="Frozen water">
+            <img src="/firstPage/odin-page1/resources/pic3.jpg" alt="Frozen water">
         </div>
     </div>
 
@@ -45,23 +45,23 @@
         <div class="images_cards">
             <div class="img-container">
                 <div class="content">
-                    <img src="pic2.jpg" alt="Bamboo leaves.">
+                    <img src="/firstPage/odin-page1/resources/pic2.jpg" alt="Bamboo leaves.">
                     <div class="card">This is an image of bamboo that I took.</div>
                 </div>
 
                 <div class="content">
-                    <img src="pic3.jpg" alt="Frozen water.">
+                    <img src="/firstPage/odin-page1/resources/pic3.jpg" alt="Frozen water.">
                     <div class="card">This is an image of the frozen pond in our garden.</div>
                 </div>
 
                 <div class="content">
-                    <img src="pic4.jpg" alt="Bamboo with a blue background.">
+                    <img src="/firstPage/odin-page1/resources/pic4.jpg" alt="Bamboo with a blue background.">
                     <div class="card">This is also some nice bamboo.</div>
                 </div>
 
                 <div class="content">
-                    <img src="pic5.jpg" alt="Bamboo leaf with water on it.">
-                    <div class="card">Tasty bamboo with water on a leaf. Panda likee.</div>
+                    <img src="/firstPage/odin-page1/resources/pic5.jpg" alt="Bamboo leaf with water on it.">
+                    <div class="card">Tasty bamboo with water on a leaf. Panda likes this.</div>
                 </div>
             </div>
         </div>
