--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="content">
-            <img src="./resources/pic3.jpg" alt="Frozen water">
+            <img src="resources/pic3.jpg" alt="Frozen water">
         </div>
     </div>
 
@@ -45,22 +45,22 @@
         <div class="images_cards">
             <div class="img-container">
                 <div class="content">
-                    <img src="./resources/pic2.jpg" alt="Bamboo leaves.">
+                    <img src="resources/pic2.jpg" alt="Bamboo leaves.">
                     <div class="card">This is an image of bamboo that I took.</div>
                 </div>
 
                 <div class="content">
-                    <img src="./resources/pic3.jpg" alt="Frozen water.">
+                    <img src="resources/pic3.jpg" alt="Frozen water.">
                     <div class="card">This is an image of the frozen pond in our garden.</div>
                 </div>
 
                 <div class="content">
-                    <img src="./resources/pic4.jpg" alt="Bamboo with a blue background.">
+                    <img src="resources/pic4.jpg" alt="Bamboo with a blue background.">
                     <div class="card">This is also some nice bamboo.</div>
                 </div>
 
                 <div class="content">
-                    <img src="./resources/pic5.jpg" alt="Bamboo leaf with water on it.">
+                    <img src="resources/pic5.jpg" alt="Bamboo leaf with water on it.">
                     <div class="card">Tasty bamboo with water on a leaf. Panda likes this.</div>
                 </div>
             </div>
