Added button hover and active

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My awesome Page No. 1</title>
+    <title>Backdrop Bliss</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="resources/pic3.jpg" type="image/x-icon">
+
 </head>
 <body>
     <!-- Header section -->
