--- a/index.html
+++ b/index.html
@@ -9,40 +9,42 @@
 
 </head>
 <body>
-    <!-- Header section -->
-    <div class="header"> 
-        <div class="logo">
-            Backdrop Bliss
+    <!--<div class="spacer hero-backdrop"-->
+        <!-- Header section -->
+        <div class="header"> 
+            <div class="logo ">
+                <a href="#"> Backdrop Bliss</a>
+            </div>
+            <ul class="right-links">
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Account</a></li>
+            </ul>
         </div>
-        <ul class="right-links">
-            <li><a href="#">Overview</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Account</a></li>
-        </ul>
-    </div>
-
-    <!-- Hero section -->
-    <div class="hero">
-        <div class="text-hero">
-            <div class="title-text">Digital Décor: <br>Screen Backgrounds</div>
-            <div class="hero-secondary">Discover a Vast Collection of Downloadable Background Images to Beautify Your Digital World</div>
-            <button id="header-button">
-                Sign up
-            </button>
+    <section>
+        <!-- Hero section -->
+        <div class="hero">
+            <div class="text-hero">
+                <div class="title-text">Digital Décor: <br>Screen Backgrounds</div>
+                <div class="hero-secondary">Discover a Vast Collection of Downloadable Background Images to Beautify Your Digital World</div>
+                <button id="header-button">
+                    Sign up
+                </button>
+            </div>
+            
+            <div class="content">
+                <img src="resources/pic3.jpg" alt="Frozen water">
+            </div>
         </div>
-        
-        <div class="content">
-            <img src="resources/pic3.jpg" alt="Frozen water">
-        </div>
-    </div>
-
+    </section>
+    <!-- </div> -->
+<div class ="spacer layer1"></div>
     <!-- Main content section -->
     <div class="main">
         <!-- Info section -->
         <div class="info">
             Here are some pictures I took <br>They make great backgrounds
         </div>
-
         <!-- Image cards section -->
         <div class="images_cards">
             <div class="img-container">
@@ -67,7 +69,7 @@
                 </div>
             </div>
         </div>
-
+<div class="small_spacer layer2 "> </div>
         <!-- Quote section -->
         <div class="quote-contianer">
             <div class="quote">
@@ -75,7 +77,7 @@
                 <div class="quote-author">-a happy customer</div>
             </div>
         </div>
-
+<div class="small_spacer layer3 "></div>
         <!-- Call to Action (CTA) section -->
         <div class="cta">
             <div class="cta-text">
@@ -89,7 +91,7 @@
             </button>
         </div>
     </div>
-
+<div class="spacer layer_bottom"></div>
     <!-- Footer section -->
     <div class="footer">
         Copyright © <a href="https://github.com/memeoplast">NMG</a>
